<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="shortcut_expense_short">Registrar gasto</string>
  <string name="shortcut_expense_long">Registrar gasto con FARO</string>
  <string name="shortcut_task_short">Nueva tarea</string>
  <string name="shortcut_task_long">Crear una tarea con FARO</string>
  <string name="shortcut_event_short">Nuevo evento</string>
  <string name="shortcut_event_long">Crear un evento FARO</string>
  <string name="shortcut_voice_short">Hablar con FARO</string>
  <string name="shortcut_voice_long">Abrir FARO Voice</string>
</resources>
